@@ -125,6 +125,7 @@ Data files format changes
 * Maps: New properties min_layer and max_layer (#445).
 * Maps: Enemies no longer have a rank property (#449).
 * Maps: New property starting_location_mode on destinations (#819).
+* Maps: width and height of custom entities are now mandatory as documented.
 * Dialogs: Allow empty texts.
 
 Sample quest changes
